...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border_plain">
        <EditText
            android:id="@+id/searchView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="10dp"
            android:imeActionLabel="actionGo"
            android:singleLine="true"
...
             android:contentDescription="Search"
             tools:ignore="OnClick" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:fillViewport="true"
        android:numColumns="2"
        />
...
